<resources>
    <string name="app_name">Sześć słoików</string>
    <string name="button_add">Wpłać</string>
    <string name="button_rem_Jar1">Wypłać</string>
    <string name="button_rem_Jar2">Wypłać</string>
    <string name="button_rem_Jar3">Wypłać</string>
    <string name="button_rem_Jar4">Wypłać</string>
    <string name="button_rem_Jar5">Wypłać</string>
    <string name="button_rem_Jar6">Wypłać</string>
    <string name="button_Clean">Oszczędzam od nowa!</string>
    <string name="deposit">Ile wpłacasz lub wypłacasz?</string>
    <string name="clean">Jeśli chcesz rozpocząć oszczedzanie od nowa kliknij poniżej:)</string>
    <string name="przerwa">-----------------------------------------------</string>
    <string name="textJar1">Opłaty stałe: </string>
    <string name="textJar2">Przyjemności: -</string>
    <string name="textJar3">Inwestycje: </string>
    <string name="textJar4">Edukacja: </string>
    <string name="textJar5">Większe zakupy: </string>
    <string name="textJar6">Datki: </string>
</resources>
