<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/Pole1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="110dp">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Pole1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="110dp">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Pole1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="110dp">

        <LinearLayout
            android:id="@+id/Pole1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="110dp">

        </LinearLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/deposit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="@string/deposit"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="15dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="62dp" />

    <LinearLayout
        android:id="@+id/Pole1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="110dp">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Pole1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="110dp">

    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textJar1"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="121dp" />

    <TextView
        android:id="@+id/textValue1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="121dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textJar2"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="142dp" />

    <TextView
        android:id="@+id/textValue2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="144dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textJar3"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="163dp" />

    <TextView
        android:id="@+id/textValue3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="163dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textJar4"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="185dp" />

    <TextView
        android:id="@+id/textValue4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="186dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textJar5"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="206dp" />

    <TextView
        android:id="@+id/textValue5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="206dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textJar6"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="227dp" />

    <TextView
        android:id="@+id/textValue6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="226dp" />

</androidx.constraintlayout.widget.ConstraintLayout>